# onnxruntime_controller

./: CMakeLists.txt  README.md  onnxruntime_controller_plugins.xml  package.xml
config/: example_params.yaml  test.yaml
include/onnxruntime_controller/: onnxruntime_controller.hpp  typed_interface.hpp
launch/: test.launch.py
models/: policy.onnx  policy.onnx.data
src/: onnxruntime_controller.cpp  onnxruntime_controller_parameters.yaml  typed_interface.cpp
urdf/: test.ros2_control.xacro
